--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					</div>
 					<footer>
 <!-- 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
- -->						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+ -->						<a href="#portfolio" class="button large scrolly">Portfolio</a>
 					</footer>
 				</div>
 			</article>
@@ -82,22 +82,22 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
-					</header>
+						<h2>Recent Projects</h2>
+<!-- 						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+ -->					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="./images/bakery-shop-portfolio.png" alt="" /></a>
+								<h3><a href="#">Bakery Shop Landing Page</a></h3>
+								<!--  --><p>Model-box was used here.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="./images/great-idea-portfolio.png" alt="" /></a>
+								<h3><a href="#">Great Idea Web Page</a></h3>
+								<p>Site that illustrates the use of Flexbox.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -172,13 +172,13 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://twitter.com/SqRobin" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li> -->
+								<li><a href="https://github.com/squarerobin" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
