--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
  					</header>
 					<div class="row">
 						<div class="col-12">
-							<form method="post" action="#">
+							
+							/* form handling thru netlify:
+							* https://docs.netlify.com/forms/setup/#html-forms*/
+
+							<form method="post" action="#" data-netlify="true">
 								<div class="row">
 									<div class="col-6 col-12-small">
 										<input type="text" name="name" id="name" placeholder="Name" />
