--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/photo.jpg" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
@@ -51,21 +51,21 @@
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
+								<span class="featured fab fa-html5 fa-10x html5"></span>
 								<h3>PSD to HTML5</h3>
 								<p>Pixel Perfect guaranteed.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
+								<span class="solid featured fab fa-js javascript fa-10x"></span>
 								<h3>Javascript Web  Applications</h3>
 								<p>Let us know your requirements and we'll build an application that suits your needs.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
+								<span class="icon featured"><img class="mongodb-icon" src="./images/mongodb-ar21.svg" alt=""></img></span>
 								<h3>MongoDB Servers</h3>
 								<p>Scripting done the right way.</p>
 							</section>
@@ -100,14 +100,14 @@
 								<p>Site that illustrates the use of Flexbox.</p>
 							</article>
 						</div>
-						<!-- <div class="col-4 col-6-medium col-12-small">
+						 <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 								<h3><a href="#">Lorem ipsum</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<!-- <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 								<h3><a href="#">Tempus dolore</a></h3>
