--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
 								<p>Site that illustrates the use of Flexbox.</p>
 							</article>
 						</div>
-						 <div class="col-4 col-6-medium col-12-small">
+					<!-- 	 <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 								<h3><a href="#">Lorem ipsum</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
-						</div>
+						</div> -->
 						<!-- <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
