commented some code lines 149 and 150

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 					<div class="row">
 						<div class="col-12">
 							
-							/* form handling thru netlify:
-							* https://docs.netlify.com/forms/setup/#html-forms*/
+							<!-- form handling thru netlify:
+							* https://docs.netlify.com/forms/setup/#html-forms*/ --> 
 
 							<form method="post" action="#" data-netlify="true">
 								<div class="row">
