--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script src="https://kit.fontawesome.com/b1d1f95a5e.js" crossorigin="anonymous"></script>
+
 	</head>
 	<body class="is-preload">
 
@@ -98,6 +100,7 @@
 								<a href="#" class="image featured"><img src="./images/great-idea-portfolio.png" alt="" /></a>
 								<h3><a href="#">Great Idea Web Page</a></h3>
 								<p>Site that illustrates the use of Flexbox.</p>
+								<a href="https://github.com/squarerobin/UI-III-Flexbox"><i class="fab fa-github fa-4x code-on-github"></i></a>
 							</article>
 						</div>
 					<!-- 	 <div class="col-4 col-6-medium col-12-small">
