fixed a typo in the html code, the github icon wasn't showing

--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
 								<a href="#" class="image featured"><img src="./images/bakery-shop-portfolio.png" alt="" /></a>
 								<h3><a href="#">Bakery Shop Landing Page</a></h3>
 								<!--  --><p>Model-box was used here.</p>
+								<a href="https://github.com/squarerobin/UI-I-Project-2---Sweet-Eats-Bakery-"><i class="fab fa-github fa-4x code-on-github"></i></a>
+
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
