bakery deployment link added

--- a/index.html
+++ b/index.html
@@ -52,24 +52,31 @@
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
+							<section class="box style2">
 								<span class="featured fab fa-html5 fa-10x html5"></span>
 								<h3>PSD to HTML5</h3>
 								<p>Pixel Perfect guaranteed.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
+							<section class="box style2">
 								<span class="solid featured fab fa-js javascript fa-10x"></span>
-								<h3>Javascript Web  Applications</h3>
-								<p>Let us know your requirements and we'll build an application that suits your needs.</p>
+								<h3>Javascript Web Apps</h3>
+								<p>Let me know your requirements and I'll build an app that suits your needs.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
+							<section class="box style2">
 								<span class="icon featured"><img class="mongodb-icon" src="./images/mongodb-ar21.svg" alt=""></img></span>
 								<h3>MongoDB Servers</h3>
 								<p>Scripting done the right way.</p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style2">
+								<span class="icon featured"><img class="react-icon" src="./images/react.png" alt=""></img></span>
+								<h3>React</h3>
+								<p>My framework of choice!</p>
 							</section>
 						</div>
 					</div>
@@ -89,37 +96,36 @@
  -->					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="./images/bakery-shop-portfolio.png" alt="" /></a>
-								<h3><a href="#">Bakery Shop Landing Page</a></h3>
-								<!--  --><p>Model-box was used here.</p>
-								<a href="https://github.com/squarerobin/UI-I-Project-2---Sweet-Eats-Bakery-"><i class="fab fa-github fa-4x code-on-github"></i></a>
+							<article class="box style3">
+								<a href="#" class="image featured"><img src="./images/space-walkers.png" alt="" /></a>
+								<h3><a href="#">SpaceWalkers</a></h3>
+								<!--  --><p>Fictional company</p>
 
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="./images/great-idea-portfolio.png" alt="" /></a>
-								<h3><a href="#">Great Idea Web Page</a></h3>
-								<p>Site that illustrates the use of Flexbox.</p>
-								<a href="https://github.com/squarerobin/UI-III-Flexbox"><i class="fab fa-github fa-4x code-on-github"></i></a>
+							<article class="box style3">
+								<a href="#" class="image featured"><img src="./images/fun_bus.png" alt="" /></a>
+								<h3><a href="#">Fun Bus</a></h3>
+								<p>Find the ten hidden events</p>
 							</article>
 						</div>
-					<!-- 	 <div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+		<!-- 				 <div class="col-4 col-6-medium col-12-small">
+							<article class="box style3">
+								<a href="#" class="image featured"><img src="images/lambda-times.png" alt="" /></a>
+								<h3><a href="#">Lambda Times</a></h3>
+								<p>Web components are fun</p>
+
 							</article>
 						</div> -->
-						<!-- <div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style3">
+								<a href="https://ui-i-project-2-sweet-eats-bakery.squarerobin.now.sh" class="image featured"><img src="images/bakery-shop-portfolio.png" alt="" /></a>
+								<h3><a href="#">Sweet Eats Bakery</a></h3>
+								<p>Landing page</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<!-- <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 								<h3><a href="#">Feugiat aliquam</a></h3>
@@ -222,3 +228,15 @@
 
 	</body>
 </html>
+
+
+
+<!-- react icon: https://fontawesome.com/license
+	
+	This SVG Icon Requires Attribution
+
+Before you download, this icon is licensed under the Creative Commons Attribution 4.0 International license and requires that you comply with the following:
+
+    You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.
+
+ -->
