--- a/index.html
+++ b/index.html
@@ -26,57 +26,85 @@
 			</nav>
 
 		<!-- Home -->
-			<article id="top" class="wrapper style1">
+			<article id="top" class="wrapper style4">
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
 							<span class="image fit"><img src="images/photo.jpg" alt="" /></span>
 						</div>
-						<div class="col-8 col-7-large col-12-medium">
+						<div class="col-8 col-7-large col-12-medium name">
 							<header>
-								<h1>Hi. I'm <strong>Luis Abellan</strong>.</h1>
+								<!-- <h1>Hi. I'm --> <h1><strong>Luis Abellan</strong></h1><!-- .</h1> -->
 							</header>
 							
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
+							<a href="#work" class="button scrolly">Learn about what I do</a>
 						</div>
 					</div>
 				</div>
 			</article>
 
 		<!-- Work -->
-			<article id="work" class="wrapper style2">
+			<article id="work" class="wrapper style5">
 				<div class="container">
 					<header>
-						<h2>Here's all the stuff I do.</h2>
+						<h2>My stack of choice.</h2>
 						<!--  <p>Odio turpis amet sed consequat eget posuere consequat.</p>-->
 					</header>
-					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style2">
-								<span class="featured fab fa-html5 fa-10x html5"></span>
-								<h3>PSD to HTML5</h3>
-								<p>Pixel Perfect guaranteed.</p>
+					<div class="row ">
+						<div class="col-2 col-6-medium col-12-small">
+							<section class="">
+								<span  style="font-size: 56m; color: orangered);" class=" fad featured fab fa-html5 html5  fa-10x"></span>
+								<!-- <h3>PSD to HTML5</h3> -->
+								<!-- <p>Pixel Perfect guaranteed.</p> -->
 							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style2">
-								<span class="solid featured fab fa-js javascript fa-10x"></span>
-								<h3>Javascript Web Apps</h3>
-								<p>Let me know your requirements and I'll build an app that suits your needs.</p>
+						<div class="col-2 col-6-medium col-12-small">
+								<section class="">
+									<span  style="font-size: 56m; color: rgb(71, 129, 255);" class=" fad featured fab fa-css3-alt css3  fa-10x"></span>
+									<!-- <h3>PSD to HTML5</h3> -->
+									<!-- <p>Pixel Perfect guaranteed.</p> -->
+								</section>
+							</div>
+						<div class="col-2 col-6-medium col-12-small">
+							<section class="">
+								<span class="fab fa-js " style="font-size: 10em; color:#F7E018;"></span>
+								<!-- <h3>Javascript Web Apps</h3> -->
+								<!-- <p>Let me know your requirements and I'll build an app that suits your needs.</p> -->
 							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style2">
-								<span class="icon featured"><img class="mongodb-icon" src="./images/mongodb-ar21.svg" alt=""></img></span>
-								<h3>MongoDB Servers</h3>
-								<p>Scripting done the right way.</p>
+						<div class="col-2 col-6-medium col-12-small">
+							<section class="">
+								<span class="icon featured"><img class="mongodb-icon" src="./images/mongodb.png" alt=""></img></span>
+								<!-- <h3>MongoDB Servers</h3> -->
+<!-- 								<p>Scripting done the right way.</p>
+ -->							</section>
+						</div>
+						<div class="col-2 col-6-medium col-12-small">
+							<section class=" ">
+								<span class="fab fa-node-js " style="font-size: 10em; color: rgb(29, 187, 37);"></span>
+								<!-- <h3>React</h3> -->
+								<!-- <p>My framework of choice!</p> -->
 							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style2">
+						<div class="col-2 col-6-medium col-12-small">
+							<section class=" ">
+								<span class="icon featured"><img class="python-icon" src="./images/python.png" alt=""></img></span>
+								<!-- <h3>React</h3> -->
+								<!-- <p>My framework of choice!</p> -->
+							</section>
+						</div>
+						<div class="col-2 col-6-medium col-12-small">
+							<section class=" ">
 								<span class="icon featured"><img class="react-icon" src="./images/react.png" alt=""></img></span>
-								<h3>React</h3>
-								<p>My framework of choice!</p>
+								<!-- <h3>React</h3> -->
+								<!-- <p>My framework of choice!</p> -->
+							</section>
+						</div>
+						<div class="col-2 col-6-medium col-12-small">
+							<section class=" ">
+								<span class="icon featured"><img class="django-icon" src="./images/django.svg" alt=""></img></span>
+								<!-- <h3>React</h3> -->
+								<!-- <p>My framework of choice!</p> -->
 							</section>
 						</div>
 					</div>
@@ -88,7 +116,7 @@
 			</article>
 
 		<!-- Portfolio -->
-			<article id="portfolio" class="wrapper style3">
+			<article id="portfolio" class="wrapper style4">
 				<div class="container">
 					<header>
 						<h2>Recent Projects</h2>
@@ -148,7 +176,7 @@
 			</article>
 
 		<!-- Contact -->
-			<article id="contact" class="wrapper style4">
+			<article id="contact" class="wrapper style2">
 				<div class="container medium">
 					<header>
 						<h2>Hire me.</h2>
@@ -188,14 +216,14 @@
 							<h3>Find me on ...</h3>
 							<ul class="social">
 								<li><a href="https://twitter.com/SqRobin" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li> -->
 								<li><a href="https://github.com/squarerobin" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<!--
-								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
+								<li><a href="https://www.linkedin.com/in/luis-abellan-dev/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<!-- 								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
+									<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li> -->
+									<!-- 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+									-->		<!--
+										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+			<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
 								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
 								<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
